# internal/handlers/taskHandlers.go
@@ -7,6 +7,7 @@ import (
 	"github.com/labstack/echo"
 	"github.com/shock_wave/restapi/internal/taskService"
 	"github.com/shock_wave/restapi/internal/web/tasks"
+	"gorm.io/gorm"
 )
 
 type Handler struct {
@@ -19,6 +20,13 @@ func NewHandler(service *taskService.TaskService) *Handler {
 	}
 }
 
+// // Для вывода полей в нужном порядке
+// type CustomTaskResponse struct {
+// 	Id     uint   `json:"id"`
+// 	Task   string `json:"task"`
+// 	IsDone bool   `json:"is_done"`
+// }
+
 // GetTasks implements tasks.StrictServerInterface.
 func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
 	allTasks, err := h.Service.ReadAllTasks()
@@ -26,31 +34,27 @@ func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObj
 		return nil, err
 	}
 
-	// Создаем переменную респон типа 200джейсонРеспонс
-	// Которую мы потом передадим в качестве ответа
-	response := tasks.GetTasks200JSONResponse{}
+	var response []tasks.Task
 
 	// Заполняем слайс response всеми задачами из БД
 	for _, tsk := range allTasks {
-		task := tasks.Task{
-			Id:     tsk.ID,
-			Task:   tsk.Task,
-			IsDone: tsk.IsDone,
-		}
-
-		response = append(response, task)
+		response = append(response, tasks.Task{
+			Id:     &tsk.ID,
+			Task:   &tsk.Task,
+			IsDone: &tsk.IsDone,
+		})
 	}
-
-	return response, nil
+	return tasks.GetTasks200JSONResponse(response), nil
 }
 
 // PostTasks implements tasks.StrictServerInterface.
 func (h *Handler) PostTasks(ctx context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
 	taskRequest := request.Body
+
 	// Обращаемся к сервису и создаем задачу
 	taskToCreate := taskService.Task{
-		Task:   taskRequest.Task,
-		IsDone: taskRequest.IsDone,
+		Task:   *taskRequest.Task,
+		IsDone: *taskRequest.IsDone,
 	}
 	createdTask, err := h.Service.CreateTask(taskToCreate)
 	if err != nil {
@@ -58,19 +62,26 @@ func (h *Handler) PostTasks(ctx context.Context, request tasks.PostTasksRequestO
 	}
 
 	// создаем структуру респонс
-	response := tasks.PostTasks201JSONResponse{
-		Id:     createdTask.ID,
-		Task:   createdTask.Task,
-		IsDone: createdTask.IsDone,
+	response := tasks.Task{
+		Id:     &createdTask.ID,
+		Task:   &createdTask.Task,
+		IsDone: &createdTask.IsDone,
 	}
-	return response, nil
+	return tasks.PostTasks201JSONResponse(response), nil
 }
 
 // PatchTasksId implements tasks.StrictServerInterface.
 func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRequestObject) (tasks.PatchTasksIdResponseObject, error) {
 	id := uint(request.Id)
-	updates := make(map[string]interface{})
 
+	// Сразу проверяем, есть ли обновления
+	if request.Body.Task == nil && request.Body.IsDone == nil {
+		return nil, echo.NewHTTPError(http.StatusBadRequest, "No updates provided")
+	}
+
+	// Формируем мапу обновлений
+	updates := make(map[string]interface{})
+	// Забираем из тела только непустые значения
 	if request.Body.Task != nil {
 		updates["task"] = *request.Body.Task
 	}
@@ -78,21 +89,22 @@ func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRe
 		updates["is_done"] = *request.Body.IsDone
 	}
 
-	if len(updates) == 0 {
-		return nil, echo.NewHTTPError(http.StatusBadRequest, "No updates provided")
-	}
-
+	// Обновляем задачу
 	updatedTask, err := h.Service.UpdateTaskByID(id, updates)
-	if err != nil {
+	switch err {
+	case nil:
+		response := tasks.Task{
+			Id:     &updatedTask.ID,
+			Task:   &updatedTask.Task,
+			IsDone: &updatedTask.IsDone,
+		}
+		return tasks.PatchTasksId200JSONResponse(response), nil
+	case gorm.ErrRecordNotFound:
+		return nil, echo.NewHTTPError(http.StatusNotFound, "Task not found")
+	default:
 		return nil, err
 	}
 
-	response := tasks.PatchTasksId200JSONResponse{
-		Id:     updatedTask.ID,
-		Task:   updatedTask.Task,
-		IsDone: updatedTask.IsDone,
-	}
-	return response, nil
 }
 
 // DeleteTasksId implements tasks.StrictServerInterface.
@@ -103,6 +115,5 @@ func (h *Handler) DeleteTasksId(ctx context.Context, request tasks.DeleteTasksId
 	if err != nil {
 		return nil, err
 	}
-
 	return tasks.DeleteTasksId204Response{}, nil
 }
